--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
         <hr class="star-light mb-5">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead">Bonjour, je suis un communicant animé par l'audace de mobiliser au service des enseignes en mal de visibilité les indicateurs clés de performances pour pallier au déficit d'image.   </p>
+            <p class="lead">Bonjour, je suis un communicant animé par l'audace de mobiliser au service des enseignes en mal de visibilité, les indicateurs clés de performances pour pallier à leur déficit d'image.   </p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="lead">Ma sémantique de projet, la vôtre, est de réussir à constituer les jalons pour réaliser un plan d'action et de communication, un audit et un business modèle en connivence avec les priorités de développement et en harmonie avec la promesse d'une communication évaluative.   </p>
+            <p class="lead">Ma sémantique de projet, est de réussir à constituer les jalons pour réaliser un plan d'action et de communication, un audit et un business modèle en connivence avec les priorités de développement et en harmonie avec la promesse d'une communication évaluative.   </p>
           </div>
         </div>
                  <p><strong> Fichiers accessibles au téléchargement : </strong></p>
@@ -137,7 +137,7 @@
           <div class="col">
           <a class="btn btn-xl btn-outline-light" href="file:///C:/Users/nader/Desktop/CoursCCI/CorrectionLiberty/liberty/index.html">
             <i class="fa fa-download mr-2"></i>
-             Intégration d'un site responsif web design 
+             Intégration HTML5/CSS3 d'un site responsif web design 
           </a>
         </div>
         </div>
