--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
     type="text/css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
 
   <!-- Plugin CSS -->
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css">
@@ -69,7 +70,7 @@
           <img src="img/algoNoir.jpg" class="imglogo" alt="">
         </div>
       </div>
-      <h1 class="text-uppercase mb-0"> Algo Solutions EURL</h1>
+      <h1 class="text-uppercase mb-0"> Algo Solutions </h1>
       <hr class="star-light">
       <h2 class="font-weight-light mb-0"> Bienvenue <br /></br> A votre service pour des prestations de Consultant
         </br>&</br>interventions Freelance </h2><br>
@@ -121,11 +122,11 @@
       <div class="row" style="text-align: center; justify-content: center;">
         <div class="col-lg-8 xl-auto">
           <p class="lead"> Bonjour, bienvenue sur mon site Internet. Je m'appelle Nader Taher et je suis chef de projet.
-            J'ai décidé de créer mon entreprise, Algo Solutions EURL afin de réaliser des prestations B2B et B2C.
+            J'ai décidé de créer Algo Solutions afin de réaliser des prestations B2B et B2C.
             </br></br>Algo Solutions intervient dans plusieurs domaines tels que le consulting stratégique, les
             relations presse, la création d'une typologie de contenu et la communication digitale.
             </br></br>Elle propose des services de conseils en communication, de relations publiques, de gestion de
-            marque, de médias sociaux, d’influence marketing, d’identité visuelle, et de publicité sur tous les supports
+            marque, des stratégies médias sociaux, d’influence marketing, d’identité visuelle, et de publicité sur tous les supports
             de communication.
             </br></br> Algo Solutions aide ses clients à tirer parti de techniques de communication et de marketing
             stratégiques à fort impact pour résoudre leurs problèmes les plus difficiles et activer les opportunités de
@@ -133,13 +134,13 @@
             </br></br>Elle met son savoir-faire diagnostic et de développement digital au service de toutes les
             structures en quête d’une stratégie de communication globale pérenne et performante.
             </br></br>Elle s’occupe de la réputation de ses clients en gérant les crises et en optimisant la
-            communication, interne comme externe et réalise également une anticipation technologique pour appréhender
+            communication, interne comme externe et réalise également une veille stratégique, concurrentielle, actualité et de surcroît une anticipation technologique pour appréhender
             les besoins futurs. </br></br>Ces accompagnements permettent à n’importe quelle société d’accroître sa
-            productivité et d’assurer les mutations qu’elle souhaite imposer à son orientation stratégique.
+            productivité et d’assurer les mutations qu’elle souhaite imposer à son orientation politique.
             </br></br>Enfin, Algo Solutions propose des applications responsive web design fait sur mesure et pensée
             mobile first.
-            </br></br>Vous souhaitez me demander un devis ? Je suis joignable par mail à l'adresse
-            nader.al.aghbari1@gmail.com et par téléphone au 77 19 49 49 ;</br></br> Vous apprécierez la disponibilité.
+            </br></br> Vous souhaitez me demander un devis ? </br></br> Je suis joignable par mail à l'adresse <i class="fas fa-envelope-open">algosolutions62@gmail.com</i>
+            </br></br>  00 253 77 19 49 49 </br></br> Vous apprécierez la disponibilité.
             </br></br></p>
 
 
@@ -365,7 +366,7 @@
 
   <div class="copyright py-4 text-center text-white">
     <div class="container">
-      <small>copyright&copy; Algo Solutions</small>
+      <small>copyright&copy; Algo Solutions </small>
     </div>
   </div>
 
